# rustcv

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml
examples/: display_image.rs
opencv-sys/: Cargo.toml  build.rs  wrapper.h
opencv-sys/src/: lib.rs
src/: core.rs  cuda.rs  dnn.rs  features2d.rs  highgui.rs  imgcodecs.rs  imgproc.rs  lib.rs  objdetect.rs
tests/: test_dnn.rs  test_features2d.rs  test_imgproc.rs  test_objdetect.rs
