[package]
name = "opencv-sys"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]
edition = "2018"

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.47"
cmake = {version="0.1", optional=true}
num_cpus = {version="1.0", optional=true}

[features]
cuda = []
contrib = []
text = []
build-opencv = ["cmake", "num_cpus"]